--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.1",
     "sass": "^1.80.4",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
